# GCP-Data-Pipelines

./: .gitignore  poetry-requirements.sh  pyproject.toml  requirements.sh  setup.py
cloud_functions/forecast/assignments/: main.py  pyproject.toml  requirements.txt
cloud_functions/forecast/assignments_filled/: main.py  pyproject.toml  requirements.txt
cloud_functions/forecast/clients/: main.py  pyproject.toml  requirements.txt
cloud_functions/forecast/people/: main.py  pyproject.toml  requirements.txt
cloud_functions/forecast/placeholders/: main.py  pyproject.toml  requirements.txt
cloud_functions/forecast/projects/: main.py  pyproject.toml  requirements.txt
cloud_functions/harvest/clients/: main.py  pyproject.toml  requirements.txt
cloud_functions/harvest/expenses/: main.py  pyproject.toml  requirements.txt
cloud_functions/harvest/projects/: main.py  pyproject.toml  requirements.txt
cloud_functions/harvest/timesheet/: main.py  pyproject.toml  requirements.txt
cloud_functions/harvest/timesheets/: main.py  pyproject.toml  requirements.txt
cloud_functions/harvest/user_project_assignments/: main.py  pyproject.toml  requirements.txt
cloud_functions/harvest/users/: main.py  pyproject.toml  requirements.txt
cloud_functions/helpers/months_columns/: pyproject.toml  requirements.txt
cloud_functions/hibob/employees/: main.py  pyproject.toml  requirements.txt
cloud_functions/hibob/holiday_balances/: main.py  pyproject.toml  requirements.txt
cloud_functions/hibob/time_off/: main.py  pyproject.toml  requirements.txt
cloud_functions/hibob/time_off_balances/: main.py
cloud_functions/hibob/time_off_policies/: main.py  pyproject.toml  requirements.txt
cloud_functions/hibob/time_off_stats/: main.py
cloud_functions/pipedrive/deals/: main.py  pyproject.toml  requirements.txt
cloud_functions/pipedrive/organisations/: main.py  pyproject.toml  requirements.txt
cloud_functions/trainline/: constants.py  main.py  pyproject.toml  requirements.txt
data_pipeline_tools/: auth.py  requirements.txt
terraform/environments/infra/: bigquery_datasets.tf  bigquery_tables_forecast.tf  bigquery_tables_hibob.tf  bigquery_tables_trainline.tf  functions_forecast.tf  functions_harvest.tf  functions_helpers.tf  functions_hibob.tf  functions_pipedrive.tf  functions_trainline.tf  kms.tf  storage.tf  trigger.tf  variables.tf
