[project]
name = "hibob-employees"
version = "1.0.0"
description = "Hibob Employees data pipeline."
authors = ["Andy Urquhart <andy.urquhart@tpximpact.com>", "Balazs Roman <balazs.roman@tpximpact.com>"]
dependencies = [
    "data-pipeline-tools>=1.0",
]

[tool.uv.sources]
data-pipeline-tools = { git = "https://github.com/tpximpact/data-pipeline-tools" }
