[tool.poetry]
name = "time-off-policies"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
data_pipeline_tools = { git = "https://github.com/tpximpact/GCP-Data-Pipelines.git", branch = "main" }
requests = "^2.28.2"
pandas = "^1.5.3"
google-cloud-core = "^2.3.2"
google-cloud-secret-manager = "^2.15.1"
pandas-gbq = "^0.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
