[project]
name = "forecast-assignments"
version = "1.0.0"
description = "Forecast Assignments data pipeline."
authors = ["Andy Urquhart <andy.urquhart@tpximpact.com>", "Balazs Roman <balazs.roman@tpximpact.com>"]
dependencies = [
    "data-pipeline-tools>=1.0",
    "pipedrive-python-lib>=1.2.3",
]

[tool.uv.sources]
data-pipeline-tools = { git = "https://github.com/tpximpact/data-pipeline-tools" }
